--- a/main_window.ui
+++ b/main_window.ui
@@ -53,7 +53,7 @@
      </rect>
     </property>
     <property name="frameShape">
-     <enum>QFrame::WinPanel</enum>
+     <enum>QFrame::Box</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
@@ -63,7 +63,7 @@
       <rect>
        <x>10</x>
        <y>190</y>
-       <width>581</width>
+       <width>281</width>
        <height>101</height>
       </rect>
      </property>
@@ -103,7 +103,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>139</height>
+       <height>174</height>
       </rect>
      </property>
      <attribute name="label">
@@ -151,7 +151,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>139</height>
+       <height>174</height>
       </rect>
      </property>
      <attribute name="label">
@@ -177,7 +177,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>139</height>
+       <height>174</height>
       </rect>
      </property>
      <attribute name="label">
@@ -190,7 +190,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>139</height>
+       <height>174</height>
       </rect>
      </property>
      <attribute name="label">
@@ -203,7 +203,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>139</height>
+       <height>174</height>
       </rect>
      </property>
      <attribute name="label">
@@ -714,9 +714,19 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>240</y>
+      <y>261</y>
       <width>581</width>
-      <height>192</height>
+      <height>171</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="listWidget">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>441</y>
+      <width>291</width>
+      <height>101</height>
      </rect>
     </property>
    </widget>
@@ -727,7 +737,7 @@
      <x>0</x>
      <y>0</y>
      <width>821</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
