--- a/main_window.ui
+++ b/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>821</width>
-    <height>602</height>
+    <width>1163</width>
+    <height>751</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>450</y>
+      <y>600</y>
       <width>171</width>
       <height>101</height>
      </rect>
@@ -48,9 +48,12 @@
      <rect>
       <x>190</x>
       <y>250</y>
-      <width>601</width>
-      <height>301</height>
+      <width>661</width>
+      <height>451</height>
      </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
     </property>
     <property name="frameShape">
      <enum>QFrame::Box</enum>
@@ -62,9 +65,9 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>190</y>
-       <width>281</width>
-       <height>101</height>
+       <y>310</y>
+       <width>151</width>
+       <height>131</height>
       </rect>
      </property>
      <property name="font">
@@ -79,6 +82,37 @@
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
+     </property>
+    </widget>
+    <widget class="QListWidget" name="listWidget">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>310</y>
+       <width>481</width>
+       <height>131</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Times</family>
+       <italic>true</italic>
+      </font>
+     </property>
+     <property name="tabletTracking">
+      <bool>false</bool>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="sizeAdjustPolicy">
+      <enum>QAbstractScrollArea::AdjustToContents</enum>
+     </property>
+     <property name="resizeMode">
+      <enum>QListView::Adjust</enum>
      </property>
     </widget>
    </widget>
@@ -103,7 +137,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>174</height>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -151,7 +185,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>174</height>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -177,7 +211,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>174</height>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -190,7 +224,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>174</height>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -203,7 +237,7 @@
        <x>0</x>
        <y>0</y>
        <width>169</width>
-       <height>174</height>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -216,7 +250,7 @@
      <rect>
       <x>190</x>
       <y>0</y>
-      <width>601</width>
+      <width>661</width>
       <height>231</height>
      </rect>
     </property>
@@ -271,9 +305,12 @@
        <rect>
         <x>20</x>
         <y>30</y>
-        <width>571</width>
+        <width>621</width>
         <height>21</height>
        </rect>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
       </property>
      </widget>
      <widget class="QComboBox" name="comboBox_sredi">
@@ -298,7 +335,7 @@
        <rect>
         <x>330</x>
         <y>70</y>
-        <width>261</width>
+        <width>311</width>
         <height>21</height>
        </rect>
       </property>
@@ -352,7 +389,7 @@
      <widget class="QLabel" name="label_2str_4">
       <property name="geometry">
        <rect>
-        <x>390</x>
+        <x>470</x>
         <y>100</y>
         <width>161</width>
         <height>16</height>
@@ -375,7 +412,7 @@
      <widget class="QLineEdit" name="lineEdit_city">
       <property name="geometry">
        <rect>
-        <x>420</x>
+        <x>470</x>
         <y>120</y>
         <width>171</width>
         <height>21</height>
@@ -385,7 +422,7 @@
      <widget class="QLabel" name="label_city">
       <property name="geometry">
        <rect>
-        <x>350</x>
+        <x>390</x>
         <y>120</y>
         <width>60</width>
         <height>16</height>
@@ -431,7 +468,7 @@
      <widget class="QComboBox" name="comboBox_kategor_sek">
       <property name="geometry">
        <rect>
-        <x>500</x>
+        <x>550</x>
         <y>170</y>
         <width>91</width>
         <height>26</height>
@@ -464,9 +501,9 @@
      <widget class="QLineEdit" name="lineEdit_sekretar">
       <property name="geometry">
        <rect>
-        <x>300</x>
+        <x>330</x>
         <y>170</y>
-        <width>191</width>
+        <width>211</width>
         <height>21</height>
        </rect>
       </property>
@@ -627,7 +664,7 @@
        <rect>
         <x>20</x>
         <y>170</y>
-        <width>176</width>
+        <width>201</width>
         <height>21</height>
        </rect>
       </property>
@@ -635,7 +672,7 @@
      <widget class="QLabel" name="label_kat_ref">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>230</x>
         <y>150</y>
         <width>81</width>
         <height>16</height>
@@ -658,7 +695,7 @@
      <widget class="QComboBox" name="comboBox_kategor_ref">
       <property name="geometry">
        <rect>
-        <x>200</x>
+        <x>230</x>
         <y>170</y>
         <width>91</width>
         <height>26</height>
@@ -670,7 +707,7 @@
      <attribute name="title">
       <string>Участники</string>
      </attribute>
-     <widget class="QLineEdit" name="lineEdit_Find_Rlist">
+     <widget class="QLineEdit" name="lineEdit_Family_name">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -680,17 +717,197 @@
        </rect>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_find">
+     <widget class="QLineEdit" name="lineEdit_bday">
       <property name="geometry">
        <rect>
-        <x>350</x>
+        <x>290</x>
         <y>30</y>
         <width>113</width>
-        <height>32</height>
+        <height>21</height>
        </rect>
       </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_R">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>30</y>
+        <width>61</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_city_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>80</y>
+        <width>161</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_Region">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>80</y>
+        <width>201</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_razryad">
+      <property name="geometry">
+       <rect>
+        <x>392</x>
+        <y>80</y>
+        <width>91</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_coach">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>130</y>
+        <width>471</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>10</y>
+        <width>91</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <italic>true</italic>
+       </font>
+      </property>
       <property name="text">
-       <string>Поиск</string>
+       <string>Фамилия, Имя</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>290</x>
+        <y>10</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <italic>true</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>Дата рождения</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>10</y>
+        <width>61</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <italic>true</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>Рейтинг</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>60</y>
+        <width>51</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <italic>true</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>Город</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>60</y>
+        <width>91</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <italic>true</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>Регион</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>60</y>
+        <width>51</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <italic>true</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>Разряд</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>110</y>
+        <width>91</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <italic>true</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>Тренер(ы)</string>
       </property>
      </widget>
     </widget>
@@ -715,19 +932,25 @@
      <rect>
       <x>200</x>
       <y>261</y>
-      <width>581</width>
-      <height>171</height>
+      <width>641</width>
+      <height>291</height>
      </rect>
     </property>
    </widget>
-   <widget class="QListWidget" name="listWidget">
+   <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>441</y>
-      <width>291</width>
-      <height>101</height>
+      <x>860</x>
+      <y>0</y>
+      <width>301</width>
+      <height>701</height>
      </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
     </property>
    </widget>
   </widget>
@@ -736,8 +959,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>821</width>
-     <height>21</height>
+     <width>1163</width>
+     <height>22</height>
     </rect>
    </property>
   </widget>
