--- a/main_window.ui
+++ b/main_window.ui
@@ -149,8 +149,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>169</width>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -236,8 +236,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>169</width>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -249,8 +249,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>169</width>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -262,8 +262,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>169</width>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -773,16 +773,6 @@
        </rect>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_Region">
-      <property name="geometry">
-       <rect>
-        <x>180</x>
-        <y>80</y>
-        <width>201</width>
-        <height>21</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QLineEdit" name="lineEdit_coach">
       <property name="geometry">
        <rect>
@@ -929,11 +919,24 @@
      <widget class="QComboBox" name="comboBox_razryad">
       <property name="geometry">
        <rect>
-        <x>390</x>
+        <x>413</x>
         <y>80</y>
-        <width>104</width>
+        <width>81</width>
         <height>26</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_region">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>80</y>
+        <width>231</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="sizeAdjustPolicy">
+       <enum>QComboBox::AdjustToContentsOnFirstShow</enum>
       </property>
      </widget>
     </widget>
