--- a/main_window.ui
+++ b/main_window.ui
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>600</y>
+      <y>570</y>
       <width>171</width>
-      <height>101</height>
+      <height>131</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -32,9 +32,9 @@
     <widget class="QPushButton" name="pushButton_view">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>60</y>
-       <width>91</width>
+       <x>20</x>
+       <y>70</y>
+       <width>111</width>
        <height>23</height>
       </rect>
      </property>
@@ -46,13 +46,39 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>20</y>
+       <y>40</y>
        <width>113</width>
        <height>32</height>
       </rect>
      </property>
      <property name="text">
       <string>Создание DB</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_export">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>141</width>
+       <height>32</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>экспорт таблицы</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_Rlist">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>100</y>
+       <width>113</width>
+       <height>32</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>R-лист</string>
      </property>
     </widget>
    </widget>
@@ -88,7 +114,7 @@
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="page">
      <property name="geometry">
@@ -150,19 +176,6 @@
      <attribute name="label">
       <string>Список участников</string>
      </attribute>
-     <widget class="QPushButton" name="pushButton_Rlist">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>110</y>
-        <width>113</width>
-        <height>32</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>R-лист</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="pushButton_add_player">
       <property name="geometry">
        <rect>
@@ -176,14 +189,27 @@
        <string>Добавить</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="pushButton_sort_R">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>110</y>
+        <width>113</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Сортировка R</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="page_3">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>169</width>
-       <height>139</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -195,8 +221,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>169</width>
-       <height>139</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -208,8 +234,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>169</width>
-       <height>139</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
