--- a/main_window.ui
+++ b/main_window.ui
@@ -181,7 +181,7 @@
        <rect>
         <x>10</x>
         <y>0</y>
-        <width>113</width>
+        <width>151</width>
         <height>32</height>
        </rect>
       </property>
@@ -194,12 +194,25 @@
        <rect>
         <x>10</x>
         <y>110</y>
-        <width>113</width>
+        <width>151</width>
         <height>32</height>
        </rect>
       </property>
       <property name="text">
-       <string>Сортировка R</string>
+       <string>Сортировка по R</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_sort_Name">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>80</y>
+        <width>151</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Сортировка по алф</string>
       </property>
      </widget>
     </widget>
@@ -208,8 +221,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>100</width>
-       <height>30</height>
+       <width>169</width>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -221,8 +234,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>100</width>
-       <height>30</height>
+       <width>169</width>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
@@ -234,8 +247,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>100</width>
-       <height>30</height>
+       <width>169</width>
+       <height>139</height>
       </rect>
      </property>
      <attribute name="label">
