--- a/main_window.ui
+++ b/main_window.ui
@@ -19,7 +19,7 @@
      <rect>
       <x>10</x>
       <y>505</y>
-      <width>180</width>
+      <width>201</width>
       <height>114</height>
      </rect>
     </property>
@@ -56,9 +56,9 @@
    <widget class="QFrame" name="frame_table">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>220</x>
       <y>250</y>
-      <width>821</width>
+      <width>801</width>
       <height>371</height>
      </rect>
     </property>
@@ -76,9 +76,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>0</y>
-      <width>180</width>
-      <height>430</height>
+      <y>10</y>
+      <width>201</width>
+      <height>441</height>
      </rect>
     </property>
     <property name="minimumSize">
@@ -89,8 +89,8 @@
     </property>
     <property name="maximumSize">
      <size>
-      <width>180</width>
-      <height>430</height>
+      <width>1200</width>
+      <height>1200</height>
      </size>
     </property>
     <property name="font">
@@ -111,8 +111,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>178</width>
-       <height>224</height>
+       <width>199</width>
+       <height>235</height>
       </rect>
      </property>
      <attribute name="label">
@@ -121,11 +121,18 @@
      <widget class="QPushButton" name="Button_title_made">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>19</x>
         <y>0</y>
-        <width>150</width>
-        <height>30</height>
+        <width>141</width>
+        <height>40</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Courier New</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>Создать</string>
@@ -134,7 +141,7 @@
        <bool>false</bool>
       </property>
       <property name="default">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="flat">
        <bool>false</bool>
@@ -143,14 +150,45 @@
      <widget class="QPushButton" name="Button_title_edit">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>30</y>
-        <width>150</width>
-        <height>30</height>
+        <x>19</x>
+        <y>40</y>
+        <width>141</width>
+        <height>40</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Courier New</family>
+       </font>
       </property>
       <property name="text">
        <string>Редактировать</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>10</y>
+        <width>21</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_edit">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>50</y>
+        <width>21</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>CheckBox</string>
       </property>
      </widget>
     </widget>
@@ -159,8 +197,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>178</width>
-       <height>224</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -224,8 +262,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>178</width>
-       <height>224</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -237,8 +275,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>178</width>
-       <height>224</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -250,8 +288,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>178</width>
-       <height>224</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -263,8 +301,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>178</width>
-       <height>224</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -275,9 +313,9 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>220</x>
       <y>0</y>
-      <width>821</width>
+      <width>801</width>
       <height>241</height>
      </rect>
     </property>
@@ -1019,11 +1057,17 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>230</x>
       <y>261</y>
-      <width>801</width>
+      <width>781</width>
       <height>351</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+      <horstretch>1</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
     <property name="font">
      <font>
@@ -1079,7 +1123,7 @@
     </property>
     <property name="maximumSize">
      <size>
-      <width>400</width>
+      <width>16000</width>
       <height>16777215</height>
      </size>
     </property>
@@ -1113,9 +1157,9 @@
    <widget class="QTableWidget" name="tableWidget_R_list">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>230</x>
       <y>260</y>
-      <width>801</width>
+      <width>781</width>
       <height>351</height>
      </rect>
     </property>
