--- a/main_window.ui
+++ b/main_window.ui
@@ -1046,15 +1046,15 @@
      </rect>
     </property>
     <property name="sizePolicy">
-     <sizepolicy hsizetype="Maximum" vsizetype="Ignored">
-      <horstretch>2</horstretch>
+     <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+      <horstretch>1</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="font">
      <font>
-      <family>DejaVu Serif</family>
-      <pointsize>11</pointsize>
+      <family>Times New Roman</family>
+      <pointsize>12</pointsize>
       <italic>true</italic>
      </font>
     </property>
